# FlatBuffersDlc

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENCE.md  README.md
.github/workflows/: main.yml
cmake/: AddFbsTarget.cmake  CPM.cmake
include/flatbuffers/: json_parser.h
src/: flat2h.cpp
